day3/configmap-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-volume-pod
spec:
  containers:
  - name: test-container
    image: k8s.gcr.io/busybox
    command: [ "/bin/sh", "-c", "env; while true; do sleep 3600; done"]
    volumeMounts:
    - name: cm-vol
      mountPath: /config
  volumes:
    - name: cm-vol
      configMap:
        name: my-second-cm
