day3/dynamic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dynamic-pod
spec:
  volumes:
    - name: local-storage
      persistentVolumeClaim:
        claimName: dynamic-pvc
  containers:
    - name: container1
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: local-storage
