day3/nodename-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nodename-pod
  name: nodename-pod
spec:
  nodeName: worker02 
  containers:
  - image: nginx
    name: nodename-pod
