day3/nodeselector-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nodeselector-pod
  name: nodeselector-pod
spec:
  nodeSelector:
    kubernetes.io/zone: dmz
  containers:
  - image: nginx
    name: c1
