day3/pod-affinity-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-affinity-pod
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - fast-storage-app
        topologyKey: kubernetes.io/country
  containers:
  - name: with-pod-affinity
    image: registry.k8s.io/pause:3.8
