day3/pod-antiaffinity-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-antiaffinity-pod
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - fast-storage-app
          topologyKey: kubernetes.io/country
  containers:
  - name: with-pod-affinity
    image: registry.k8s.io/pause:3.8
