day3/shop-backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shop-backend
  labels:
    app: shop
    type: backend
spec:
  containers:
  - name: mariadb
    image: mariadb
    ports:
    - containerPort: 3306
