day3/shop-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shop-busybox
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl 
    command: ["sh", "-c", "while true; do sleep 1d; done"]
