day3/toleration-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: toleration-pod
  name: toleration-pod
spec:
  tolerations:
  - key: "kubernetes.io/env"
    operator: "Exists"
    effect: "NoSchedule"
  containers:
  - image: nginx
    name: toleration-pod
