day3/shop-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shop-networkpolicy
  namespace: shop
spec:
  podSelector:
    matchLabels:
      app: shop
      type: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: shop
          type: front
    ports:
    - protocol: TCP
      port: 3306
